--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,7 @@ dependencies:
   flutter_svg: ^2.0.7
   lottie: ^2.6.0
   path_provider: ^2.1.0
-  audioplayers: ^5.1.0
-
+  just_audio: ^0.9.34
 dev_dependencies:
   flutter_test:
     sdk: flutter
