--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   lottie: ^2.6.0
   path_provider: ^2.1.0
   just_audio: ^0.9.34
+  flutter_tts: ^3.8.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
