Speech to text added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.1.0
   just_audio: ^0.9.34
   flutter_tts: ^3.8.1
+  speech_to_text: ^6.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
