--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_tts: ^3.8.1
   speech_to_text: ^6.3.0
   fluttertoast: ^8.2.2
+  liquid_swipe: ^3.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
