--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   speech_to_text: ^6.3.0
   fluttertoast: ^8.2.2
   liquid_swipe: ^3.1.0
+  firebase_core: ^2.15.1
+  firebase_auth: ^4.8.0
+  google_sign_in: ^6.1.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
