--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   google_sign_in: ^6.1.5
   carousel_slider: ^4.2.1
+  camera: ^0.10.5+4
 dev_dependencies:
   flutter_test:
     sdk: flutter
