--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   google_sign_in: ^6.1.5
   carousel_slider: ^4.2.1
   camera: ^0.10.5+4
+  highlight_text: ^1.7.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
