--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   permission_handler: ^10.4.3
   confetti: ^0.7.0
   percent_indicator: ^4.2.3
+  flutter_heatmap_calendar: ^1.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -96,10 +97,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Rubik
+      fonts:
+        - asset: Assets/Fonts/Rubik-Light.ttf
+          weight: 300
+        - asset: Assets/Fonts/Rubik-Regular.ttf
+          weight: 400
+        - asset: Assets/Fonts/Rubik-Medium.ttf
+          weight: 500
+        - asset: Assets/Fonts/Rubik-SemiBold.ttf
+          weight: 600
+        - asset: Assets/Fonts/Rubik-Bold.ttf
+          weight: 700
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
