--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,9 +81,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - Assets/Icons/
+    - Assets/Icons/AppIcons/
     - Assets/Animation/
     - Assets/Audio/
     - Assets/Image/
+    
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
