--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   percent_indicator: ^4.2.3
   flutter_heatmap_calendar: ^1.0.5
   avatar_glow: ^2.0.2
+  animated_text_kit: ^4.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
