--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   avatar_glow: ^2.0.2
   animated_text_kit: ^4.2.2
   shared_preferences: ^2.2.1
+  connectivity_plus: ^4.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
