--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   animated_text_kit: ^4.2.2
   shared_preferences: ^2.2.1
   connectivity_plus: ^4.0.2
+  swipe_cards: ^2.0.0+1
+  auto_size_text: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
