--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,5 +68,8 @@ flutter {
 }
 
 dependencies {
+     implementation(platform("com.google.firebase:firebase-bom:32.2.3"))
+       implementation("com.google.firebase:firebase-appcheck-debug")
+    implementation("com.google.firebase:firebase-appcheck-ktx")
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
